[package]
name = "connect"
version = "0.0.2"
edition = "2018"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
description = "message queue abstraction over async network streams"
keywords = ["async", "network", "message", "queue", "aio"]
categories = ["asynchronous", "network-programming", "rust-patterns", "encoding"]
repository = "https://github.com/sachanganesh/connect-rs"
readme = "REAMDE.md"
license-file = "LICENSE"

[workspace]
members = [
    "examples/tcp-client",
    "examples/tcp-echo-server",
    "examples/tls-client",
    "examples/tls-echo-server",
]


[dependencies]
anyhow = "1.0.31"
async-channel = "1.4.0"
async-std = { version = "1.6.2", features = ["unstable"] }
async-tls = { version = "0.9.0", default-features = false, features = ["client", "server"]}
bytes = "0.5.5"
futures = "0.3.8"
log = "0.4"
protobuf = "2.18.1"
rustls = "0.18.0"

[build-dependencies]
protobuf-codegen-pure = "2.18.1"
