[package]
name = "connect"
version = "0.1.3"
edition = "2018"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
description = "message queue abstraction over async network streams"
keywords = ["async", "network", "message-queue", "mq", "aio"]
categories = ["asynchronous", "network-programming", "rust-patterns", "encoding"]
repository = "https://github.com/sachanganesh/connect-rs"
documentation = "https://docs.rs/connect/"
readme = "README.md"
license = "Apache-2.0"

[workspace]
members = [
    "examples/*",
]


[dependencies]
anyhow = "1.0.31"
async-channel = "1.4.0"
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
async-tls = { version = "0.9.0", default-features = false, features = ["client", "server"]}
bytes = "0.5.5"
futures = "0.3.8"
log = "0.4"
rustls = "0.18.0"
