[package]
name = "connect"
version = "0.2.3"
edition = "2018"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
description = "message queue abstraction over async network streams"
keywords = ["async", "network", "message-queue", "mq", "aio"]
categories = ["asynchronous", "network-programming", "rust-patterns", "encoding"]
repository = "https://github.com/sachanganesh/connect-rs"
documentation = "https://docs.rs/connect/"
readme = "README.md"
license = "Apache-2.0"

[package.metadata.docs.rs]
features = ["tls"]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/*",
]


[features]
tls = ["async-tls", "rustls"]

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9.0", features = ["unstable"] }
async-stream = "0.3.0"
bytes = "0.5.5"
futures = "0.3"
futures-lite = "1.11"
log = "0.4"

async-tls = { version = "0.11.0", default-features = false, features = ["client", "server"], optional = true }
rustls = { version = "0.19.0", optional = true }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }