[package]
name = "tls-client"
version = "0.1.0"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
async-tls = { version = "0.11.0", default-features = false, features = ["client", "server"] }
rustls = { version = "0.19.0" }
env_logger = "0.7"
log = "0.4"

connect = { path = "../../", features = ["tls"] }
